--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <section id="gift-section">
         <h2>Hadiah Spesial untuk Winda</h2>
-        <img src="gift.png" id="giftImage" class="clickable" alt="Kado"/>
+        <img src="kado" id="giftImage" class="clickable" alt="Kado"/>
         <button id="openGiftButton">Buka Kado</button>
         <div id="giftContent" class="hidden">
             <p id="typingEffect"></p>
