--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <audio id="backgroundMusic" loop autoplay>
-        <source src="romantic-music" type="audio/mpeg">
+        <source src="romantic-music.mp3" type="audio/mpeg">
     </audio>
     
     <header>
