--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section id="gift-section">
         <h2>Hadiah Spesial untuk Winda</h2>
         <img src="kado.png" id="giftImage" class="clickable" alt="Kado"/>
-        <button id="openGiftButton">Buka Kado</button>
+        <button id="openGiftButton" class="centered-button">Buka Kado</button>
         <div id="giftContent" class="hidden">
             <p id="typingEffect"></p>
             <button id="viewJourneyButton" class="hidden">Lihat Perjalanan Cinta</button>
