--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
     <section id="gift-section">
         <h2>Hadiah Spesial untuk Winda</h2>
         <img src="kado.png" id="giftImage" class="clickable" alt="Kado"/>
+         <!-- From Uiverse.io by barisdogansutcu --> 
+<div class="love">
+  <input id="switch" type="checkbox">
+  <label class="love-heart" for="switch">
+    <i class="left"></i>
+    <i class="right"></i>
+    <i class="bottom"></i>
+    <div class="round"></div>
+  </label>
+</div>
         <button id="openGiftButton">Buka Kado</button>
         <div id="giftContent" class="hidden">
             <p id="typingEffect"></p>
